@@ -6,7 +6,7 @@
 and semantics are as close as possible to those of the Perl 5 language.
 
                        Written by Philip Hazel
-           Copyright (c) 1997-2012 University of Cambridge
+           Copyright (c) 1997-2014 University of Cambridge
 
 -----------------------------------------------------------------------------
 Redistribution and use in source and binary forms, with or without
@@ -170,7 +170,9 @@ static const int eint[] = {
   REG_BADPAT,  /* missing opening brace after \o */
   REG_BADPAT,  /* parentheses too deeply nested */
   REG_BADPAT,  /* invalid range in character class */
-  REG_BADPAT   /* group name must start with a non-digit */
+  REG_BADPAT,  /* group name must start with a non-digit */
+  /* 85 */
+  REG_BADPAT   /* parentheses too deeply nested (stack check) */
 };
 
 /* Table of texts corresponding to POSIX error codes */
